--- a/src/main/resources/webapp/viewer/index.html
+++ b/src/main/resources/webapp/viewer/index.html
@@ -13,23 +13,28 @@
 	<link href="/webapp/static/nouislider.min.css" rel="stylesheet"/>
 	<script src="/webapp/static/nouislider.min.js"></script>
 	<link href="/webapp/static/panl.css" rel="stylesheet"/>
+	<link href="/webapp/static/grd.min.css" rel="stylesheet"/>
 	<link href="/webapp/static/jquery-ui.min.css" rel="stylesheet"/>
 	<link rel="icon" type="image/png" href="/webapp/static/favicon.png"/>
 </head>
 <body>
 <div id="container">
 	<div id="header">
-		<h1>Panl</h1>
+		<div id="heading">
+			<h1>Panl</h1>
 
-		<h2><em>a very simple results viewer (or <a href="/panl-results-explainer/">explainer</a> or <a href="/panl-single-page-search/">single page search</a>)</em></h2>
-
-		<hr/>
+			<h2><em>a very simple results viewer (or <a href="/panl-results-explainer/">explainer</a> or <a href="/panl-single-page-search/">single page search</a>)</em></h2>
+		</div>
 
 		<h3>Panl server response code: <span id="response_code"></span></h3>
 
 		<p><strong>~ ~ ~ * ~ ~ ~</strong></p>
 
-		<p>Available collections/fieldset URI Paths (CaFUPs): <br/><span id="available_collections"></span></p>
+
+		<p>Available collections/fieldset URI Paths (CaFUPs): <span id="collection_toggle"><strong>[Toggle visibility]</strong></span></p>
+		<div id="collection_holder">
+			<p><span id="available_collections"></span></p>
+		</div>
 
 		<p><strong>~ ~ ~ * ~ ~ ~</strong></p>
 
@@ -39,8 +44,31 @@
 		</p>
 
 	</div>
-	<div id="wrapper">
-		<div id="content">
+	<div class="Grid">
+		<div class="Cell -4of12">
+			<div id="navigation">
+				<p class="navheading"><strong>Search Query</strong></p>
+				<form method="GET">
+					<label><input id="searchfield" type="text" name="search" disabled="disabled"/></label>
+					<button id="searchbutton" type="submit" disabled="disabled">Search</button>
+					<div id="search-checkboxes"></div>
+				</form>
+
+				<p class="navheading"><strong>Active Filters</strong></p>
+				<ul id="active"></ul>
+				<p id="activesort" class="navheading"></p>
+
+				<p class="navheading"><strong>Checkboxes</strong></p>
+				<ul id="boolean-checkbox"></ul>
+
+				<p id="ranges-marker" class="hidden navheading"><strong>Range Filters</strong></p>
+				<div id="ranges"></div>
+
+				<p class="navheading"><strong>Available Filters</strong></p>
+				<ul id="available"></ul>
+			</div>
+		</div>
+		<div class="Cell -8of12">
 			<div class="padding">
 				<p>
 					<span id="num_results" class="left"><strong>Search Results</strong> </span>
@@ -66,27 +94,13 @@
 		</div>
 	</div>
 
-	<div id="navigation">
-		<p class="navheading"><strong>Search Query</strong></p>
-		<form method="GET">
-			<label><input id="searchfield" type="text" name="search" disabled="disabled"/></label>
-			<button id="searchbutton" type="submit" disabled="disabled">Search</button>
-			<div id="search-checkboxes"></div>
-		</form>
 
-		<p class="navheading"><strong>Active Filters</strong></p>
-		<ul id="active"></ul>
-		<p id="activesort" class="navheading"></p>
+	<div id="wrapper">
+		<div id="content">
 
-		<p class="navheading"><strong>Checkboxes</strong></p>
-		<ul id="boolean-checkbox"></ul>
-
-		<p id="ranges-marker" class="hidden navheading"><strong>Range Filters</strong></p>
-		<div id="ranges"></div>
-
-		<p class="navheading"><strong>Available Filters</strong></p>
-		<ul id="available"></ul>
+		</div>
 	</div>
+
 
 	<div id="footer">
 		<p class="info">This page is designed to showcase the Panl LPSE encoding mechanism,
