updated single page search interface

--- a/src/main/resources/webapp/single-page-search/index.html
+++ b/src/main/resources/webapp/single-page-search/index.html
@@ -18,10 +18,11 @@
 <body>
 <div id="container">
 	<div id="header">
-		<h1>Panl</h1>
-		<h2><em>a very simple single search page  (or <a href="/panl-results-viewer/">viewer</a> or <a href="/panl-results-explainer/">explainer</a>)</em></h2>
+		<div id="heading">
+			<h1>Panl</h1>
+			<h2><em>a very simple single search page  (or <a href="/panl-results-viewer/">viewer</a> or <a href="/panl-results-explainer/">explainer</a>)</em></h2>
+		</div>
 
-		<hr />
 
 		<p><span id="available_collections"></span></p>
 		<p><strong>Panl LPSE encoded path:</strong><br /><span id="panl-lpse-path"></span></p>
