Implemented printing of more like this for the book store in HTML and added the fields lookup

--- a/src/main/resources/webapp/viewer/index.html
+++ b/src/main/resources/webapp/viewer/index.html
@@ -91,6 +91,7 @@
 
 			<p class="info clear" id="timings"></p>
 			<div id="documents"></div>
+			<div id="morelikethis"></div>
 		</div>
 	</div>
 
