updated images for documentation

--- a/src/main/resources/webapp/viewer/index.html
+++ b/src/main/resources/webapp/viewer/index.html
@@ -54,11 +54,11 @@
 						<p>Search for:</p>
 						<div>
 							<input type="radio" id="op_AND" name="op" value="+">
-							<label for="op_AND">All the words (AND)</label>
+							<label for="op_AND">All the words (<code>q.op</code> AND)</label>
 						</div>
 						<div>
 							<input type="radio" id="op_OR" name="op" value="-">
-							<label for="op_OR">Any of the words (<code>q.op</code>OR)</label>
+							<label for="op_OR">Any of the words (<code>q.op</code> OR)</label>
 						</div>
 					</div>
 					<div id="search-checkboxes"></div>
